docs: add link to story & doc

--- a/src/stories/Button.docs.mdx
+++ b/src/stories/Button.docs.mdx
@@ -30,3 +30,7 @@ export const Template = (args) => <Button {...args} />
 <Canvas>
   <Story id="example-button--emad-story" />
 </Canvas>
+
+[Go to Emad's Button Story](?path=/story/example-button--emad-story)
+
+[Go to Emad's Button Documents](?path=/docs/example-button--emad-story)
