docs: update btn document

--- a/src/stories/Button.docs.mdx
+++ b/src/stories/Button.docs.mdx
@@ -9,9 +9,10 @@ It's the documents related to `Button` component
 
 export const Template = (args) => <Button {...args} />
 
-- [Primary](#primary)
-- [Secondary](#secondary)
-- [Emad's Button](#emads-button)
+- [Numbers from 0 to 9](#numbers-from-0-to-9)
+- [Mathematic Operators](#mathematic-operators)
+- [Equal Operator](#equal-operator)
+- [Reset (C) Operator](#reset-c-operator)
 
 ### Numbers from 0 to 9
 
@@ -37,6 +38,6 @@ export const Template = (args) => <Button {...args} />
   <Story id="example-button--reset" />
 </Canvas>
 
-[Go to Emad's Button Story](?path=/story/example-button--emad-story)
+[Go to Number Type Button Story](?path=/story/example-button--number)
 
-[Go to Emad's Button Documents](?path=/docs/example-button--emad-story)
+[Go to Button Documents](?path=/docs/example-button--number)
